--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,31 +6,22 @@
   "compatibility_flags": [
     "nodejs_compat"
   ],
-  // "vars": {
-  //   "MY_VAR": "my-variable"
-  // },
-  // "kv_namespaces": [
-  //   {
-  //     "binding": "MY_KV_NAMESPACE",
-  //     "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  //   }
-  // ],
-  // "r2_buckets": [
-  //   {
-  //     "binding": "MY_BUCKET",
-  //     "bucket_name": "my-bucket"
-  //   }
-  // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
-  // "ai": {
-  //   "binding": "AI"
-  // },
+  "r2_buckets": [
+    {
+      "binding": "BUCKET",
+      "bucket_name": "goose-world-traveler"
+    }
+  ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "goose-world-traveler",
+      "database_id": "7f7cabfd-1295-4608-8d0e-ce2e944fe9e4"
+    }
+  ],
+  "ai": {
+    "binding": "AI"
+  },
   "observability": {
     "enabled": true
   }
