--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "demo-app",
-  "main": "src/index.ts",
+  "main": "src/index.tsx",
   "compatibility_date": "2025-03-04",
   "compatibility_flags": [
     "nodejs_compat"
