Update Readme Change dev:wrangler to dev and remove dev:node from package.json.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "type": "module",
   "name": "demo-app",
   "scripts": {
-    "dev:wrangler": "wrangler dev",
-    "deploy": "wrangler deploy --minify",
-    "dev:node": "tsx watch src/index.ts"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
     "@fiberplane/hono": "^0.4.4",
