--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,8 @@
   "r2_buckets": [
     {
       "binding": "BUCKET",
-      "bucket_name": "goose-world-traveler"
+      "bucket_name": "goose-world-traveler",
+      "preview_bucket_name": "goose-world-traveler"
     }
   ],
   "d1_databases": [
